--- a/example.Rmd
+++ b/example.Rmd
@@ -6,12 +6,36 @@ editor_options:
 
 ```{r}
 #| echo: false
-knitr::opts_chunk$set(eval = FALSE)
+# knitr::opts_chunk$set(eval = FALSE)
+get_format <- function() {
+  rmarkdown::all_output_formats(knitr::current_input())
+}
+
+# include_figure <- function(path) {
+#   if (get_format() == "bookdown::pdf_document2") {
+#     knitr::include_graphics(gsub(".html", ".png", path))
+#   } else {
+#     knitr::include_url(path)
+#   }
+# }
 ```
+
+```{r}
+#| echo: false
+#| eval: false
+examples <- list.files("./figures") |> 
+  (\(x) { x[startsWith(x, "example") & endsWith(x, ".html")] })()
+
+urls <- paste0("./figures/", examples)
+outs <- gsub(".html", ".png", urls)
+
+webshot2::webshot(urls, outs, delay = 30)
+```
+
 
 # Applied example
 
-> Please note that the data set used in this section is fairly large (~70,000 rows) and so this section takes a while to load.
+> Please note that the data set used in this section is fairly large (~70,000 rows) and so the figures take some time to load (please allow ~30 seconds).
 
 This section demonstrates a typical interactive workflow with `plotscaper`. The goal is to showcase the package's key features and capabilities by exploring a large, real-world data set, pertaining to a pressing issue: mental health.
 
@@ -28,7 +52,7 @@ The Long-term Care data set [@soukupova2023] contains longitudinal information a
 Here's the data set at a quick glance:
 
 ```{r}
-#| eval: true
+#| 
 df <- read.csv("./data/longterm_care.csv")
 dplyr::glimpse(df)
 ```
@@ -73,7 +97,6 @@ df |>
 
 ```{r example-cases-days}
 #| echo: false
-#| eval: true
 #| out-extra: 'style="border: none;"'
 #| fig-cap: "Relationship between the number of cases in a patient subgroup and the total number of days spent in care."
 knitr::include_url("./figures/example-cases-days.html")
@@ -95,7 +118,6 @@ df |>
 
 ```{r example-cases-stay-cat}
 #| echo: false
-#| eval: true
 #| out-extra: 'style="border: none;"'
 #| fig-cap: "The relationship between cases and days is subject to a pooling effect: while patient groups within each care duration category (short-term, medium-term, and long-term) exhibit a linear relationship individually, this does not hold when the groups are considered together."
 knitr::include_url("./figures/example-cases-stay-cat.html")
@@ -123,7 +145,6 @@ df |>
 
 ```{r example-cases-avg-days}
 #| echo: false
-#| eval: true
 #| out-extra: 'style="border: none;"'
 knitr::include_url("./figures/example-cases-avg-days.html")
 ```
@@ -167,6 +188,7 @@ On its own, the declining number of cases over time might appear as a positive d
 Another way we can scrutinize the trend more closely by zooming into the histogram:
 
 ```{r}
+#| eval: false
 schema |> 
   assign_cases(which(df$year == 2010), 1) |>
   assign_cases(which(df$year == 2022), 2) |>
@@ -233,7 +255,7 @@ So far, we have been using a fairly simple interactive workflow that could be ea
 By following these steps, you should end up with a figure similar to the one below:
 
 ```{r}
-#| fig-cap: "While the proportion of days spent in treatment by children and adolescent has declined, the proportion of cases that children and adolescents make up has increased."
+#| eval: false
 df |>
   create_schema() |>
   add_barplot(c("year", "cases")) |>
@@ -248,11 +270,20 @@ df |>
   render() 
 ```
 
+```{r example-cases-days-children-marked}
+#| echo: false
+#| eval: true
+#| out-extra: 'style="border: none;"'
+#| fig-cap: "While the proportion of days spent in treatment by children and adolescent has declined, the proportion of cases that children and adolescents make up has increased."
+knitr::include_url("./figures/example-cases-days-children-marked.html")
+```
+
 Interestingly, the two barplots show the opposite trend. While the proportion of the treatment days used by children and adolescents has declined over time, the proportion of total cases they make up has increased. The relative increase in cases appears to be driven by an overall decline in patient numbers: in absolute counts, the number of child and adolescent patients has remained fairly constant between 2010 to 2022, while the total patient count has decreased.
 
 We can also get a more granular breakdown by plotting the age category variable:
 
 ```{r}
+#| eval: false
 df |>
   create_schema() |>
   add_barplot(c("age_category", "cases")) |>
@@ -260,6 +291,14 @@ df |>
   add_barplot(c("age_category", "days")) |>
   add_barplot(c("year", "days")) |>
   render()
+```
+
+
+```{r example-cases-days-age}
+#| echo: false
+#| eval: true
+#| out-extra: 'style="border: none;"'
+knitr::include_url("./figures/example-cases-days-age.html")
 ```
 
 Again, if we interrogate the figure by employing interactive actions such as selection, zooming, and normalization, we can discover that one age category in which there has been steady growth in both the proportion of cases and days spend in treatment are 70-79 year olds. This aligns with the limited placement availability hypothesis: while these patients account for a relatively small fraction of the total cases, they represent a disproportionately large and increasing proportion of days in treatment. Later, we will also see evidence that many of these patients suffer from neurodegenerative diseases, which require intensive long-term care. It may be the case that, with increasing life-expectancy, the healthcare system is not able to handle the influx of older patients, limiting the availability of placements. 
@@ -287,9 +326,10 @@ kableExtra::kbl(icd10,
 
 To explore the prevalence of the various diagnoses as well as their demographic characteristics, we create another interactive figure. For this figure, I decided to plot the following variables: `diagnosis`, `age_category`, `sex`, and `reason_for_termination`. These seemed like the most interesting demographic variables. The `region` variable could also be an interesting choice, however, initial exploration did not reveal any interesting trends so I decided to omit it. 
 
-From now on, I will describe interesting features of the data in text rather than through individual figures. You are encouraged to verify these findings by interacting with the figure, using the various techniques that have been discussed so far.
+From now on, I will describe interesting features of the data in text rather than through individual figures. You are encouraged to verify these findings by interacting with the figures and using the techniques discussed so far.
 
-```{r prevalence}
+```{r}
+#| eval: false
 # Create ordering for barplots based on frequency
 order_df <- aggregate(cases ~ diagnosis, sum, data = df)
 order_df <- order_df[order(order_df$cases), ]
@@ -309,13 +349,21 @@ df |>
   render()
 ```
 
-From the barplot in the top left panel of the Figure \@ref(fig:prevalence), we can immediately see that the majority patient load was taken up by the top five most common disorders. There were over 40,000 cases with each of these disorders, and together they made up over 75% of all cases (319,557 out of 414,242).     
+```{r example-cases-diagnosis}
+#| echo: false
+#| eval: true
+#| out-extra: 'style="border: none;"'
+#| fig-cap: "Majority of patient load was taken up by the top five most common disorders: alcohol-use disorders, schizophrenia, Alzheimer's disease, neurotic and stress-related disorders, and psychoactive substance disorders."
+knitr::include_url("./figures/example-cases-diagnosis.html")
+```
 
-> Press the `Q` key and hover over the bars in the top left panel of Figure \@ref(fig:prevalence) to see what disorder each represents.
+The barplot in the top left panel of the Figure \@ref(fig:example-cases-diagnosis) shows that the five most common disorders accounted for the majority of patient cases. Each of these disorders affected over 40,000 patients between 2010 and 2022, representing over 75% of all cases (319,557 out of 414,242).     
+
+> Press the `Q` key and hover over the bars in the top left panel of Figure \@ref(fig:example-cases-diagnosis) to see what diagnosis each represents.
 
 In order of prevalence, the top five disorders were, were: alcohol-use disorders, schizophrenia, Alzheimer's disease, neurotic and stress-related disorders, and disorders caused by psychoactive substances (excluding alcohol). Overall, the high prevalence of these disorders is fairly, given that their high socio-economic impact is well-known to psychiatrists. Nevertheless, it may be illustrative to take a closer look at this data and examine demographic trends.  
 
-First, alcohol use disorders were the most common diagnosis. This is not surprising, since, globally, alcohol use disorders rank among the most common disorders and are associated with high mortality due to chronic health conditions and injury [@carvalho2019]. In the data set, this diagnosis was about twice as common in men and showed a fairly symmetric, normal-shaped age distribution, occurring the most frequently in 40-49 and 50-59 year-olds (this can be seen by selecting the corresponding bar in the top-left panel of figure Figure \@ref(fig:prevalence) and normalizing the age-category barplot). 
+First, alcohol use disorders were the most common diagnosis. This is not surprising, since, globally, alcohol use disorders rank among the most common disorders and are associated with high mortality due to chronic health conditions and injury [@carvalho2019]. In the data set, this diagnosis was about twice as common in men and showed a fairly symmetric, normal-shaped age distribution, occurring the most frequently in 40-49 and 50-59 year-olds (this can be seen by selecting the corresponding bar in the top-left panel of figure Figure \@ref(fig:example-cases-diagnosis) and normalizing the age-category barplot). 
 
 The second most prevalent category of diagnoses were schizophrenia, schizotypal, and delusional disorders. While the individual lifetime prevalence of schizophrenia is not as high as some other disorders on this list, the reason for its high representation in the data set is likely its chronic and serious nature. Among those with mental illness, people with schizophrenia have one of the lowest life expectancies [see e.g. @chang2011], and often require multi-year or even life-long hospitalization [@messias2007]. This debilitating nature of schizophrenia has prompted some experts to describe it as "arguably one of the most severe health conditions affecting mankind" [see e.g. @messias2007; @tandon2024]. In the data set at hand, schizophrenic disorders had a fairly balanced sex ratio and a fairly flat age distribution.
 
@@ -346,7 +394,7 @@ Regardless, the diagnoses which followed the top five tended to be more specific
 We can also scrutinize the prevalence of different mental disorders over time. Again, we need to distinguish between the number of cases versus the number of days patients spent in care. We can use the following figure:
 
 ```{r}
-
+#| eval: false
 df |>
   create_schema() |>
   add_barplot(c("diagnosis", "cases")) |>
@@ -357,9 +405,16 @@ df |>
   render()
 ```
 
+```{r example-cases-diagnosis-time}
+#| echo: false
+#| eval: true
+#| out-extra: 'style="border: none;"'
+knitr::include_url("./figures/example-cases-diagnosis-time.html")
+```
+
 Overall, over time, the proportion of both cases and days in treatment the various diagnoses made up seemed to remain fairly constant, with perhaps a slight general decreasing trend in the number of cases. Of the top five diagnoses, the one which seemed to buck this trend was schizophrenia (F20-F29), which had a fairly marked increasing trend in the proportion of days. Furthermore, the number of cases related to psychoactive substance use disorders (excluding alcohol) seemed to also be rising slightly.
 
-Of the rarer disorders, the one in which there seemed to be a significant relative rise in both the proportion of cases and days in treatment were mental and behavioral disorders associated with physiological disturbances and physical factors (F50-F59). This category includes disorders such as anorexia, bulimia, sleep disorders, and sexual dysfunction disorders. Given that this category was more prevalent in women and young people (as can be seen by interrogating Figure \@ref(fig:prevalence)), the likely explanation for this trend is rise in the number of cases of anorexia and bulimia. There also seemed to be slight of a decrease in the number of days spent in treatment by patients with stress-related disorders (F40-F49 without F42) and depression disorders (F32 and F33).
+Of the rarer disorders, the one in which there seemed to be a significant relative rise in both the proportion of cases and days in treatment were mental and behavioral disorders associated with physiological disturbances and physical factors (F50-F59). This category includes disorders such as anorexia, bulimia, sleep disorders, and sexual dysfunction disorders. Given that this category was more prevalent in women and young people (as can be seen by interrogating Figure \@ref(fig:example-cases-diagnosis)), the likely explanation for this trend is rise in the number of cases of anorexia and bulimia. There also seemed to be slight of a decrease in the number of days spent in treatment by patients with stress-related disorders (F40-F49 without F42) and depression disorders (F32 and F33).
 
 We can quickly verify these findings by fitting simple linear regressions for each diagnosis. First, we can model the number of cases by year:
 
@@ -435,7 +490,8 @@ Here, the situation was a bit more varied. For most diagnoses, the number of day
 
 One final things we are going to investigate are characteristics of patient cohorts. Specifically, given that each row of data represents one patient cohort within a given year, of a given sex, diagnosis, and so on, we can investigate whether there were any interesting patterns within the patient cohorts over time. One way we can do this is via the following figure:
 
-```{r cohort}
+```{r}
+#| eval: false
 df |>
   create_schema() |>
   add_barplot(c("diagnosis", "cases")) |>
@@ -446,9 +502,17 @@ df |>
   render()
 ```
 
-In Figure \@ref(fig:cohort), I show plots of diagnoses, as well as a summary of days and cases over time. However, note that, whereas all barplots of days and cases over time shown before had sum (of cases and days) as the y-axis summary statistic, the two barplots in the lower half of figure Figure \@ref(fig:cohort) show maximum, not sum. These plots effectively tell us the size and the number of days in treatment for the largest/longest hospitalized patient cohort within a given year. Based on theory in Section \@ref(problems), we know that these plots will behave well under linked selection (with one selection group).
+```{r example-cases-diagnosis-max}
+#| echo: false
+#| eval: true
+#| out-extra: 'style="border: none;"'
+#| fig-cap: "While Alzheimer's patients accounted for the longest hospitalized cohorts prior to 2016, following 2016, the longest hospitalized cohorts tended to be schizophrenia patients."
+knitr::include_url("./figures/example-cases-diagnosis-max.html")
+```
 
-By investigating the diagnoses, we can discover some interesting trends in the patient cohorts. Specifically, by comparing the schizophrenia (F20-F29) and the Alzheimer's disease diagnoses (F0 and G30), we can see that they show a complementary trend in the maximum number of days hospitalized. Specifically, whereas Alzheimer's disease generally accounted for the longest-hospitalized patient cohorts up until 2016, schizophrenia accounted for the longest-hospitalized patient cohorts for five of the six years following 2016 (excluding 2020, where Alzheimer's disease narrowly beat it out). This occured despite schizophrenia patient cohorts shrinking in size over time and the fact that Alzheimer's disease was more restricted in terms of age-range, so we would naturally expect larger cohorts (due to "lumping"). On that note, developmental disorders (F80-F99), despite the making up only a small proportion of the total number cases, made up many of the largest patients cohorts year over year. This is understandable given that these patients came almost exclusively from the youngest age group and were otherwise relatively homogeneous.
+In Figure \@ref(fig:example-cases-diagnosis-max), I show plots of diagnoses, as well as a summary of days and cases over time. However, note that, whereas all barplots of days and cases over time shown before had sum (of cases and days) as the y-axis summary statistic, the two barplots in the lower half of figure Figure \@ref(fig:example-cases-diagnosis-max) show maximum, not sum. These plots effectively tell us the size and the number of days in treatment for the largest/longest hospitalized patient cohort within a given year. Based on theory in Section \@ref(problems), we know that these plots will behave well under linked selection (with one selection group).
+
+By investigating the diagnoses, we can discover some interesting trends in the patient cohorts. Specifically, by comparing the schizophrenia (F20-F29) and the Alzheimer's disease diagnoses (F0 and G30), we can see that they show a complementary trend in the maximum number of days hospitalized. Specifically, whereas Alzheimer's disease generally accounted for the longest-hospitalized patient cohorts up until 2016, schizophrenia accounted for the longest-hospitalized patient cohorts for five of the six years following 2016 (excluding 2020, where Alzheimer's disease narrowly beat it out). This occurred despite schizophrenia patient cohorts shrinking in size over time and the fact that Alzheimer's disease was more restricted in terms of age-range, so we would naturally expect larger cohorts (due to "lumping"). On that note, developmental disorders (F80-F99), despite the making up only a small proportion of the total number cases, made up many of the largest patients cohorts year over year. This is understandable given that these patients came almost exclusively from the youngest age group and were otherwise relatively homogeneous.
 
 ## Summary
 
