--- a/references.bib
+++ b/references.bib
@@ -422,7 +422,7 @@
   title		= {JSON: data model, query languages and schema
 		  specification},
   author	= {Bourhis, Pierre and Reutter, Juan L and Su{\'a}rez,
-		  Fernando and Vrgo{\v{c}}, Domagoj},
+		  Fernando and Vrgoč, Domagoj},
   booktitle	= {Proceedings of the 36th ACM SIGMOD-SIGACT-SIGAI symposium
 		  on principles of database systems},
   pages		= {123--135},
@@ -2544,7 +2544,7 @@
 @InProceedings{	  pezoa2016,
   title		= {Foundations of JSON schema},
   author	= {Pezoa, Felipe and Reutter, Juan L and Suarez, Fernando and
-		  Ugarte, Mart{\'\i}n and Vrgo{\v{c}}, Domagoj},
+		  Ugarte, Martín and Vrgoč, Domagoj},
   booktitle	= {Proceedings of the 25th international conference on World
 		  Wide Web},
   pages		= {263--273},
@@ -3043,9 +3043,7 @@
 @Misc{		  soukupova2023,
   author	= {Soukupová, J and Melicharová, H and Šanca, O and
 		  Bartůněk, V and Jarkovský, J and Komenda, M},
-  title		= {{Dlouhodob{\ifmmode\acute{a}\else\'{a}\fi}
-		  psychiatrick{\ifmmode\acute{a}\else\'{a}\fi}
-		  p{\ifmmode\acute{e}\else\'{e}\fi}{\ifmmode\check{c}\else\v{c}\fi}e}},
+  title		= {{Dlouhodobá psychiatrická péče}},
   journal	= {NZIP},
   year		= {2023},
   month		= jan,
@@ -3057,10 +3055,10 @@
 @Article{	  splechtna2018,
   title		= {Cross-table linking and brushing: Interactive visual
 		  analysis of multiple tabular data sets},
-  author	= {Splechtna, Rainer and Beham, Michael and Gra{\v{c}}anin,
-		  Denis and Ganuza, Mar{\'\i}a Luj{\'a}n and B{\"u}hler,
-		  Katja and Pand{\v{z}}i{\'c}, Igor Sunday and Matkovi{\'c},
-		  Kre{\v{s}}imir},
+  author	= {Splechtna, Rainer and Beham, Michael and Gračanin,
+		  Denis and Ganuza, María Luján and Bühler,
+		  Katja and Pandžić, Igor Sunday and Matković,
+		  Krešimir},
   journal	= {The Visual Computer},
   volume	= {34},
   number	= {6},
@@ -3667,8 +3665,7 @@
 
 @Misc{		  uzis2024,
   author	= {{ÚZIS}},
-  title		= {{About us - {\ifmmode\acute{U}\else\'{U}\fi}ZIS
-		  {\ifmmode\check{C}\else\v{C}\fi}R}},
+  title		= {{About us - ÚZIS ČR}},
   year		= {2024},
   month		= dec,
   note		= {[Online; accessed 17. Dec. 2024]},
@@ -4254,3 +4251,5 @@
 	note = {[Online; accessed 24. Jan. 2025]},
 	url = {https://rstudio.github.io/crosstalk/index.html}
 }
+
+
