--- a/index.Rmd
+++ b/index.Rmd
@@ -3,9 +3,10 @@ title: "Fluent Graphics"
 author: "Adam Bartonicek"
 site: bookdown::bookdown_site
 documentclass: book
+always_allow_html: true
 output:
-  #bookdown::html_document2: default
-  bookdown::gitbook: default
+  bookdown::gitbook:
+    css: styles.css
 bibliography: [references.bib]
 biblio-style: "apalike"
 link-citations: true
@@ -45,7 +46,6 @@ knitr::knit_engines$set(ts = function(options) {
     ts_path <- get_ts_filepath(options$code[1]) 
     ts_conn <- file(ts_path)
     writeLines(code, ts_conn)
-    
     
     out <- paste("~/.bun/bin/bun run", ts_path) |> 
       system(intern = TRUE, ignore.stderr = TRUE)
